--- a/css/basic.css
+++ b/css/basic.css
@@ -168,6 +168,10 @@
     height:175px;
     border-radius: 15px;
 }
+.my-intro{
+    width:1400px;
+    margin: 0 auto;
+}
 .my-intro>h1{
     padding-top:20px;
     font-size: 28px;
@@ -175,5 +179,115 @@
     font-weight: bolder;
     color:black;
     text-align: center;
-    
+    margin-bottom:15px;
+}
+.my-intro-all{
+    display: flex;
+    flex-direction: column;
+}
+.my-intro-content{
+    width:100%;
+    height:400px;
+    margin-bottom:40px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.my-intro-img{
+    width:45%;
+    height:400px;
+}
+.my-intro-img img{
+    width:100%;
+    height:100%;
+}
+.my-intro-text{
+    width:45%;
+    text-align: justify;
+    line-height: 1.75;
+    font-size: 18px;
+    padding:15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.my-intro-text p{
+    margin:8px;
+}
+.more-info{
+    width:1400px;
+    margin: 0 auto;
+    background-color: rgb(100, 20, 20);
+    position: relative;
+}
+.more .more-a {
+    position: absolute;
+    bottom:12px;
+    right:10px;
+    color: white;
+    font-size: 14px;
+}
+.info-text{
+    display:flex;
+    justify-content: space-around;
+}
+.more-info .feedback{
+    width:32%;
+    padding-top:10px;
+    padding-bottom: 10px;
+    margin-top:10px;
+    margin-bottom:30px;
+    display: flex;
+    align-items: center;
+}
+.more-info h1{
+    padding-top:15px;
+    text-align: center;
+}
+.more-info a{
+    color:white;
+    font-size:28px;
+    line-height: 2;
+    text-decoration: none;
+}
+.feed-img{
+    width:120px;
+    height:120px;
+    border-radius: 120px;
+    margin-left:10px;
+}
+.feed-img img{
+    width:100%;
+}
+.feed-text{
+    text-align: justify;
+    margin-left:20px;
+    width:280px;
+    height:230px;
+    margin-top:10px;
+    margin-bottom:10px;
+    color:white;
+    line-height: 1.5;
+    overflow: scroll;
+}
+.contact{
+    width:1400px;
+    margin: 0 auto;
+    height:100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.contact-img{
+    margin-left:40px;
+}
+.contact-img img{
+    width:200px;
+}
+.contact-text{
+    margin-right:40px;
+    color:brown;
+}
+.contact-title{
+    color:black;
 }
