--- a/css/process.css
+++ b/css/process.css
@@ -26,6 +26,10 @@
     padding-left:25px;
     display:block;
 }
+.header ul>li a:hover{
+    background-color: gray;
+    color:white;
+}
 .home{
     width:1400px;
     margin: 0 auto;
