--- a/css/basic.css
+++ b/css/basic.css
@@ -295,3 +295,9 @@
 .contact-title{
     color:black;
 }
+.feedback:hover{
+    box-shadow: 6px 8px 12px orange ;
+}
+.more-info a:hover{
+    color:orange
+}
