--- a/css/process.css
+++ b/css/process.css
@@ -276,3 +276,9 @@
 .contact-title{
     color:black;
 }
+.feedback:hover{
+    box-shadow: 6px 8px 12px orange ;
+}
+.more-info a:hover{
+    color:orange
+}
