--- a/css/plan.css
+++ b/css/plan.css
@@ -50,6 +50,10 @@
     padding-bottom:8px;
     text-align: center;
 }
+.taco{
+    width:1400px;
+    margin: 0 auto;
+}
 .main{
     width:1400px;
     margin: 0 auto;
