--- a/css/plan.css
+++ b/css/plan.css
@@ -90,9 +90,31 @@
     font-size: 18px;
     color: white;
 }
+.pv-all{
+    width:1400px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 28px;
+    line-height: 2;
+    font-weight: bolder;
+}
+.pv{
+    width:100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.pv-content{
+    width:30%;
+    margin-top:15px;
+    margin-bottom:15px;
+}
+.pv-content img{
+    margin-left:0%;
+}
+
 .check{
-    color:greenyellow;
-    font-size: 18px;
+    color:red;
+    font-size: 24px;
 }
 .run{
     color:brown;
@@ -105,7 +127,7 @@
 .main{
     width:1400px;
     margin: 0 auto;
-    margin-top:5px;
+    
     position: relative;
     background: url(../images/pexels-photo-4466381.webp);
     background-size:cover;
@@ -207,6 +229,7 @@
 .fc2-box{
     border:4px solid yellow;
 }
+
 .main-why{
     width:1400px;
     margin: 0 auto;
