--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@
     margin-bottom:20px;
     position: relative;
 }
-.ocp-open,.fans-open,.ntnu-open{
+.ocp-open,.fans-open,.ntnu-open,.edu-open{
     width:600px;
     border:1px solid white;
     border-radius: 10px;
@@ -67,6 +67,31 @@
     margin-top:-20px;
     z-index: 1000;
     display: none;
+}
+.edu-open>h1{
+    margin-left:10px;
+    margin-right:10px;
+    border-bottom:1px solid gray;
+}
+.edu-hide{
+    position: absolute;
+    display: flex;
+    width:100%;
+    height:100%;
+    border-radius: 10px;
+    background-image: url(../images/teach.jpg);
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+.edu-hide h1{
+    color:white;
+}
+.edu-hide input{
+    margin:6px;
+    width:300px;
+    height:30px;
 }
 .fans-open{
     margin-top:-5px;
@@ -105,10 +130,10 @@
     margin-left:25px;
     margin-top:20px;
 }
-.ocp-open-2,.fans-open-2,.ntnu-open-2{
+.ocp-open-2,.fans-open-2,.ntnu-open-2,.edu-open-2{
     display: block;
 }
-.close-button,.close-button2,.close-button3{
+.close-button,.close-button2,.close-button3,.close-button4{
     position: absolute;
     right:10px;
     bottom:5px;
@@ -118,6 +143,9 @@
     color: pink;
     border: 1px solid pink;
 }
+.close-button4{
+    z-index: 1000;
+}
 .verify-button{
     position: absolute;
     right:60px;
@@ -126,11 +154,52 @@
     color: pink;
     border: 1px solid pink;
 }
+.verify-button2{
+    position: absolute;
+    right:60px;
+    bottom:5px;
+    z-index: 1000;
+}
+.username{
+    position: absolute;
+    top:35px;
+    right:30px;
+}
 .close-button2:hover ,.verify-button:hover{
     background: pink;
     color:white;
 }
-
+.edu-block-all{
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+}
+.edu-block{
+    width:30%;
+    padding-left:5px;
+    margin:3px;
+    margin-left:13px;
+}
+.teach-video{
+    height:300px;
+}
+.edu-block h2{
+    text-align: center;
+    font-size: 20px;
+    line-height: 2;
+    font-weight: bolder;
+    border-bottom: 1px dotted gray;
+}
+.edu-block li a{
+    line-height: 1.65;
+    color: black;
+    text-decoration: none;
+    display: block;
+}
+.edu-block li a:hover{
+    background-color: grey;
+    color: white;
+}
 .about h1{
     text-align: center;
     font-size: 28px;
