--- a/css/index.css
+++ b/css/index.css
@@ -183,7 +183,7 @@
     background: #000;
     z-index: 1001;
     margin-left:100px;
-    margin-top:200px;
+    margin-top:70%;
     display: none;
     justify-content: center;
     align-items: center;
