--- a/css/index.css
+++ b/css/index.css
@@ -251,7 +251,8 @@
     height:300px;
     border-radius: 10px;
     position: absolute;
-    background: #000;
+    background-image: url(../images/fg.jpg);
+    background-size: contain;
     z-index: 1001;
     margin-left:100px;
     margin-top:40%;
@@ -263,22 +264,36 @@
     display: flex;
 }
 .forgot h1{
-    color: white;
+    color: pink;
+    text-shadow: 1px 1px 1px white;
 }
 .forgot input{
     width:200px;
     height:30px;
     margin-bottom: 5px;
+    background-color: rgba(255, 255, 255, 0.85);
+    border: 1px solid pink;
+    color: pink;
 }
 .forgot-1{
     margin-top: 10px;
     width:200px;
+    border: 1px solid pink;
+    color: pink;
+    background-color: transparent;
 }
 .forgot-2{
     width:200px;
     position: absolute;
     bottom: 35px;
     right:100px;
+    border: 1px solid pink;
+    color: pink;
+    background-color: transparent;
+}
+.forgot-1:hover,.forgot-2:hover{
+    color: white;
+    background-color: pink;
 }
 .close-button2:hover ,.verify-button:hover{
     background: pink;
