--- a/css/basic.css
+++ b/css/basic.css
@@ -128,6 +128,35 @@
     font-size: 18px;
     margin-top:30px;
 }
+.chart-block-all{
+    width: 1400px;
+    height: 330px;
+    margin: 0 auto;
+}
+.chart-block-all>h1{
+    margin-top:10px;
+    line-height: 2;
+    font-size: 28px;
+    font-weight: bolder;
+    text-align: center;
+
+}
+.chart-block{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.chart{
+    width:18%;
+    height:250px;
+}
+.chart>h2{
+    line-height: 1.5;
+    font-size:20px;
+    font-weight: bold;
+    text-align: center;
+    padding:10px;
+}
 .achievement{
     width:1400px;
     height:550px;
@@ -227,7 +256,6 @@
     margin: 0 auto;
 }
 .my-intro>h1{
-    padding-top:20px;
     font-size: 28px;
     line-height: 2;
     font-weight: bolder;
