--- a/css/basic.css
+++ b/css/basic.css
@@ -254,6 +254,31 @@
 .my-intro{
     width:1400px;
     margin: 0 auto;
+    position: relative;
+}
+.size{
+    width: 70px;
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    top:25px;
+    right:66px;
+}
+.size-content{
+    width:30%;
+    border: 1px solid black;
+    text-align: center;
+    padding: 1px;
+}
+.size-content:hover{
+    cursor: pointer;
+    background: #000;
+    color: white;
+}
+.change{
+    background: #000;
+    color: white;
 }
 .my-intro>h1{
     font-size: 28px;
@@ -275,6 +300,7 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
 .my-intro-img{
     width:45%;
     height:400px;
