--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,9 @@
     z-index: 1000;
     display: none;
 }
+.edu-open{
+    margin-top:20px;
+}
 .ocp-open-text-all{
     margin-left:50px;
     margin-right: 50px;
@@ -122,7 +125,7 @@
 .edu-open>h1{
     margin-left:10px;
     margin-right:10px;
-    border-bottom:1px solid gray;
+    border-bottom:1px solid brown;
 }
 .edu-hide{
     position: absolute;
@@ -309,9 +312,6 @@
     padding-left:5px;
     margin:3px;
     margin-left:13px;
-}
-.teach-video{
-    height:300px;
 }
 .edu-block h2{
     text-align: center;
@@ -760,4 +760,35 @@
 }
 .contact-title{
     color:black;
+}
+.vid{
+    display: flex;
+    width: 100%;
+    height: 100px;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size:24px;
+    
+}
+.vid-title{
+    color: brown;
+}
+.vid a{
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    line-height: 2;
+    display: block;
+    color: brown;
+}
+.vid a:hover{
+    background: brown;
+    color:white;
+}
+.vid-2{
+    height: 80px;
+    margin-bottom: -20px;
+}
+.vid-3{
+    padding-bottom: 20px;
 }
